# OpenDevicePartnership.github.io

./: Cargo.toml  Trunk.toml  ec-interface-repos.csv  ec-repos.csv  generate_web_graph.py  index.html  patina-repos.csv  repos.csv  rust-toolchain.toml  tailwind.config.js
.github/workflows/: gh-pages-deploy.yaml
src/: lib.rs  main.rs
src/components/: coming_soon.rs  community_teams.rs  documentation_training.rs  ec_repo_view.rs  footer.rs  governance_teams.rs  header.rs  hello_world.rs  image_button.rs  intro_message.rs  landing_page.rs  landingpage.rs  main.rs  mod.rs  project_introduction.rs  projects.rs  projects_component.rs  projectscomponent.rs  repo_view.rs  subprojects.rs  team_grid.rs  welcome.rs
src/pages/: about.rs  boot_firmware.rs  community.rs  contact.rs  documentation.rs  embedded_controller.rs  getting_started.rs  gettingstarted.rs  governance.rs  home.rs  library.rs  mod.rs  mptf.rs  news_and_blogs.rs  projects.rs  team_ec.rs  team_ec_services.rs  team_patina.rs  uefi.html  uefi.md  uefi.rs  unified_ec_services.rs  windows_ec_services.rs
style/: tailwind.css
