[package]
name = "odp"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.2", features = ["csr"] }
leptos_meta = "0.8.2"
leptos_router = "0.8.2"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["Document", "Window", "console"] }

[dev-dependencies]
wasm-bindgen = "0.2.100"
wasm-bindgen-test = "0.3.50"
web-sys = { version = "0.3.77", features = ["Document", "Window", "console"] }

[package.metadata.leptos]
assets-dir="public"